# rioplatense_hate_speech

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.ini.template
data/: dict_argentino.json  errors.csv  sample_100.csv  sample_100_aya.csv  sample_100_mixtral.csv  sample_dev_df.csv  sample_df.csv  sample_df_mixtral.csv  test_01_aya_.csv  test_01_beto.csv  test_02_aya_.csv  test_02_beto.csv  test_03.csv  test_03_aya_.csv  test_04.csv  test_04_beto.csv  test_04_pred_1shot.csv  test_05.csv  test_05_aya_.csv  test_05_beto.csv  test_05_pred_1shot.csv  test_06.csv  test_07.csv  test_08.csv  test_09.csv  test_10.csv  test_beto.csv
data/regionalisms/: check_regionalisms.csv  check_regionalisms_annotated.csv  df_regionalism.csv  dict_argentino.json  sample_100_annotated.csv  sample_100_regionalism.csv  test_01_regionalism.csv  (+4 more)
notebooks/: ChatGPT detect-regionalisms.ipynb  CoT-experiments.ipynb  Explore Aya.ipynb  Explore ChatGPT.ipynb  Explore Mixtral.ipynb  LGBTI.ipynb  Mixtral.ipynb  Mixtral_AMD.ipynb  Mixtral_Colab_(run_only_in_A100).ipynb  Mixtral_cpu_offload.ipynb  RACISM.ipynb  Regionalisms Annotation.ipynb  Results_full.ipynb  Results_not_regional.ipynb  Results_regionalisms.ipynb  WOMEN.ipynb  chat-gpt-hs.ipynb  ejemplos.md  raw-comparison.ipynb  regionalisms-dictionary.ipynb  scrapping.ipynb  test-results bert.ipynb  test-results oneshot.ipynb  test-results.ipynb
results/: full_results.csv
rioplatense_hs/: config.py  mixtral.py  openai.py  preprocessing.py  prompting.py  regionalisms.py
tests/: preprocessing_test.py  prompting_test.py
(+31 files in other folders)
